k8s/40-ingress/40-django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rescuehub-ingress
  namespace: rescuehub
  labels:
    app.kubernetes.io/name: rescuehub-ingress
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: rescuehub
  annotations:
    # Importante para upload de PDFs/documentos pelo formulário de adoção.
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    # Sem host fixo para funcionar melhor no Codespaces e em laboratório local.
    # Se quiser usar domínio local, adicione: host: rescuehub.local
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
